CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(RPIClient CXX)

SET(BINDIR ${CMAKE_SOURCE_DIR}/bin)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fdiagnostics-color=always -fPIE -std=c++17 -Wall -O2")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -fPIE")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--as-needed")

ADD_DEFINITIONS("-DENABLE_COLORS")

find_package(Boost REQUIRED)
find_package(Threads REQUIRED)
find_library(wiringPi_LIB wiringPi REQUIRED)

FILE(GLOB SRCS ./src/*.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} LINK_PUBLIC ${Boost_LIBRARIES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} LINK_PUBLIC ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} LINK_PUBLIC ${wiringPi_LIB})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR})
